[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/m5x7_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://HUD/ScoreUI.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "fade-once"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade-once"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade-once"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ScoreUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 70.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 136.0
margin_bottom = 26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="VBoxContainer/ScoreText"]
margin_right = 60.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Digits" type="Label" parent="VBoxContainer/ScoreText"]
margin_left = 64.0
margin_right = 136.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Incremental_0" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 30.0
margin_right = 136.0
margin_bottom = 56.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Incremental_0"]
margin_left = 96.0
margin_right = 108.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="Digits" type="Label" parent="VBoxContainer/Incremental_0"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "42"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Incremental_0"]
anims/fade-once = SubResource( 1 )

[node name="Incremental_1" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 60.0
margin_right = 136.0
margin_bottom = 86.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Incremental_1"]
margin_left = 72.0
margin_right = 84.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="Digits" type="Label" parent="VBoxContainer/Incremental_1"]
margin_left = 88.0
margin_right = 136.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "4242"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Incremental_1"]
anims/fade-once = SubResource( 2 )

[node name="Incremental_2" type="HBoxContainer" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 90.0
margin_right = 136.0
margin_bottom = 116.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Incremental_2"]
margin_left = 48.0
margin_right = 60.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="Digits" type="Label" parent="VBoxContainer/Incremental_2"]
margin_left = 64.0
margin_right = 136.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )
text = "424242"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/Incremental_2"]
anims/fade-once = SubResource( 3 )
[connection signal="animation_finished" from="VBoxContainer/Incremental_0/AnimationPlayer" to="." method="_on_AnimationPlayer_inc0_animation_finished"]
[connection signal="animation_finished" from="VBoxContainer/Incremental_1/AnimationPlayer" to="." method="_on_AnimationPlayer_inc1_animation_finished"]
[connection signal="animation_finished" from="VBoxContainer/Incremental_2/AnimationPlayer" to="." method="_on_AnimationPlayer_inc2_animation_finished"]
